<resources>
    <string name="app_name">delifast</string>
    <string name="emailAdresse">Email-Adresse</string>
    <string name="logo">logo</string>
    <string name="Passwort">passwordField</string>
    <string name="passwordField">Passwort</string>
    <string name="Bestellung">Bestellung</string>
    <string name="Lieferung">Lieferung</string>
    <string name="Profil">Profil</string>
    <string name="Nachrichten">Nachrichten</string>
    <string name="facebook_app_id">997491474327877</string>
    <string name="fb_login_protocol_scheme">fb997491474327877</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Bestellungsdetails">Bestellungsdetails</string>
    <string name="Vorkasse">Vorkasse</string>
    <string name="Service">Service</string>
    <string name="Gewuenschte_Lieferzeit">Gewünschte Lieferzeit</string>
    <string name="Adresse">Adresse</string>
    <string name="Suche">Suche</string>
    <string name="Login">Login</string>
    <string name="Kostenpflichtig_bestellen">Kostenpflichtig bestellen</string>
    <string name="dein_gewinn">Dein Gewinn:</string>
    <string name="vorkasse">Vorkasse:</string>
</resources>