<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/outline_shopping_bag_24"
        android:title="@string/Bestellung"/>
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/outline_directions_bike_24"
        android:title="@string/Lieferung"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/outline_chat_24"
        android:title="@string/Nachrichten"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/outline_person_24"
        android:title="@string/Profil"/>
</menu>